# space_invaders

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
SDL2-2.30.3/: .clang-format
SDL2-2.30.3/cmake/: sdl2-config-version.cmake  sdl2-config.cmake
SDL2-2.30.3/docs/: CONTRIBUTING.md  README-android.md  README-cmake.md  README-directfb.md  README-dynapi.md  README-emscripten.md  README-gdk.md  README-gesture.md  README-git.md  README-ios.md  README-kmsbsd.md  README-linux.md  README-macos.md  README-n3ds.md  README-nacl.md  README-ngage.md  README-os2.md  README-pandora.md  README-porting.md  README-ps2.md  README-psp.md  README-raspberrypi.md  README-riscos.md  README-touch.md  README-versions.md  README-visualc.md  README-vita.md  README-windows.md  README-winrt.md  README.md  release_checklist.md
SDL2-2.30.3/i686-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake  sdl2-config.cmake
SDL2-2.30.3/test/: CMakeLists.txt  relative_mode.markdown
SDL2-2.30.3/test/nacl/: background.js  common.js  index.html  manifest.json
SDL2-2.30.3/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
SDL2-2.30.3/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
SDL2_image-2.8.2/i686-w64-mingw32/lib/: libSDL2_image.la
SDL2_image-2.8.2/i686-w64-mingw32/lib/pkgconfig/: SDL2_image.pc
cmake/modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
include/: controls.h  disassemble8080p.h  foo.h  libattopng.h  machine.h  opcodes.h  settings.h  shell.h  sound.h  state.h  structs.h  timer_win.h  video.h
src/: controls.c  disassemble8080p.c  disassembler-0xC1-0xFF.c  first run opcode.c  julie opcodes.c  libattopng.c  machine.c  main.c  print_rom_assembly.c  remain_opcodes.c  rom_sections.c  shell.c  sound.c  state.c  test_functions.c  timer_apple.c  timer_linux.c  timer_win.c  video.c
tests/: CMakeLists.txt  test_add.c  test_adi.c  test_ana_reg.c  test_call.c  test_cmc.c  test_compare.c  test_complement.c  test_decimal_adjust.c  test_diagnostics_asm.c  test_exchange.c  test_immediates.c  test_io_interrupts.c  test_jump.c  test_load.c  test_mov_mem_to_reg.c  test_mov_reg_to_mem.c  test_mov_reg_to_reg.c  test_move_immediate.c  test_nop.c  test_ora_ori.c  test_push_pop.c  test_return.c  test_rotate.c  test_sound.c  test_states.c  test_stc.c  test_store.c  test_subtract.c  test_test.c  test_xchg.c  test_xra_reg.c  test_xra_xri.c
